# SimpliDFS

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  PROGRESS.MD  README.MD  SECURITY.md  TESTING_GUIDE.md  VERSION  compile_commands.json  metaserver  node  rbac_policy.yaml  run_fuse_stress_tests.sh  run_fuse_tests.sh  setup_dependencies.sh  setup_dependencies_opensuse.sh  simpli_fuse_adapter
.github/workflows/: cmake.yml  development_tag.yml  fuse_stress.yml  fuzz_testing.yml  gcp_deploy.yml  rebootstrap.yml  release.yml
ansible/roles/edge_node/: README.md
ansible/roles/edge_node/defaults/: main.yml
ansible/roles/edge_node/handlers/: main.yml
ansible/roles/edge_node/tasks/: main.yml
bench/: CMakeLists.txt  blockio_bench.cpp  grpc_bench.cpp  run_latency_tests.sh
deploy/: docker-compose.yml  metaserver.Dockerfile  node.Dockerfile
docs/: Doxyfile  README.md  blockio_proto.md  fedramp_mapping.md  gcp_ci_cd.md  hash_layer.md  ipfs_gateway.md  key_rotation.md  migration_sketch.md  overview.md  pki.md  rest_api.md  security.md  tiered_storage_playbook.md
include/: s3_gateway.h
include/cluster/: NodeHealthCache.h
include/grpc/: grpc_server.h
include/grpc/proto/: filesystem.grpc.pb.h  filesystem.pb.h
include/metaserver/: README.md  metaserver.h  node_health_tracker.h
include/node/: README.md  node.h
include/repair/: RepairWorker.h  ReplicaVerifier.h
include/spiffe/workload/: workload.grpc.pb.h  workload.pb.h
include/utilities/: README.md  address_utils.h  audit_log.hpp  audit_verifier.hpp  blockio.hpp  chunk_store.hpp  cid_utils.hpp  client.h  digest.hpp  errorcodes.h  filesystem.h  fips.h  fuse_adapter.h  http.hpp  ipfs_gateway.h  key_manager.hpp  logger.h  merkle_tree.hpp  message.h  metrics.h  networkexception.h  prometheus_server.h  raft.h  rbac.h  server.h  stress_utils.hpp  svid_fetcher.h  var_dir.hpp
licenses/: libsodium.LICENSE
monitoring/: alerts.yaml
monitoring/grafana/: simplidfs_dashboard.json
proto/: filesystem.proto
scripts/: generate_ato_bundle.sh  generate_node_cert.sh  rebootstrap_raft.sh  rotate_jwt_secret.sh  rotate_key.sh
src/: blockio.cpp  blockio.hpp  client.cpp  client.h  errorcodes.cpp  filesystem.cpp  filesystem.h  grpc_server.cpp  ipfs_gateway.cpp  logger.cpp  logger.h  main.cpp  main_metaserver.cpp  main_node.cpp  message.cpp  message.h  metaserver.cpp  metaserver.h  networking_stubs.h  node.cpp  node.h  rest_server.cpp  s3_gateway.cpp  server.cpp  server.h  simplidfs_ctl.cpp
src/cluster/: NodeHealthCache.cpp
src/grpc/: filesystem.grpc.pb.cc  filesystem.pb.cc
src/metaserver/: README.md  metaserver.cpp  node_health_tracker.cpp
src/node/: README.md  node.cpp
src/repair/: RepairWorker.cpp  ReplicaVerifier.cpp
src/spiffe/workload/: workload.grpc.pb.cc  workload.pb.cc
src/utilities/: CMakeLists.txt  README.md  audit_log.cpp  audit_verifier.cpp  blockio.cpp  chunk_store.cpp  cid_utils.cpp  client.cpp  errorcodes.cpp  filesystem.cpp  fips.cpp  fuse_adapter.cpp  http.cpp  json.cpp  key_manager.cpp  logger.cpp  merkle_tree.cpp  metrics.cpp  prometheus_server.cpp  raft.cpp  rbac.cpp  server.cpp  stress_utils.cpp  svid_fetcher.cpp  var_dir.cpp
tests/: CMakeLists.txt  CONCURRENCY_TEST_IDEAS.md  address_utils_tests.cpp  audit_log_tests.cpp  blockio_test.cpp  chaos_kill_node.sh  chunk_store_tests.cpp  cid_tests.cpp  cleanup_fuse_test_env.sh  concurrency_tests.cpp  filesystem_tests.cpp  fuse_adapter_tests.cpp  fuse_append_main.cpp  fuse_basic_tests.cpp  fuse_basic_tests.hpp  fuse_concurrency_test_utils.hpp  fuse_concurrency_tests.cpp  fuse_concurrency_tests.hpp  fuse_mount_main.cpp  fuse_random_write_main.cpp  fuse_simple_append_main.cpp  fuse_simple_write_main.cpp  fuse_stress_main.cpp  fuse_stress_test.cpp  fuse_stress_test.hpp  http_utils_tests.cpp  integration_tests.cpp  json_tests.cpp  key_manager_tests.cpp  logger_tests.cpp  merkle_proof_tests.cpp  merkle_tree_tests.cpp  message_tests.cpp  metaserver_tests.cpp  metrics_registry_tests.cpp  minimal_test.cpp  networking_tests.cpp  node_health_tracker_tests.cpp  node_io_tests.cpp  node_tests.cpp  (+18 more)
tests/fuzz/: blockio_fuzzer.cpp  filesystem_fuzzer.cpp  message_fuzzer.cpp  metaserver_load_fuzzer.cpp  node_logic_fuzzer.cpp
tests/mocks/: mock_filesystem.h  mock_networking.h
tests/posix/: CMakeLists.txt  posix_tests.cpp
